# caduceus

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  RELEASING.md  SECURITY.md  __init__.py  _runtime.py  plugin.yaml
.github/workflows/: ci.yml  commit-policy.yml
docs/: README.md  architecture.md  ci.md  configuration.md  faq.md  hermes-integration.md  installation.md  plugin-lifecycle.md  public-voice.md  state-recovery.md  the-bridge.md  troubleshooting.md
openspec/: config.yaml
planning/: 2026-07-12_220000-caduceus-v0.1.md  README.md
planning/caduceus-v0.1/: AGENT_LOOP.md  CONTRACTS.md  CONTRACT_REVISIONS.md  README.md  progress.json  task-manifest.json
planning/caduceus-v1.0/: AGENT_LOOP.md  CONTRACTS.md  CONTRACT_REVISIONS.md  README.md  progress.json  task-manifest.json
plugin/: README.md  SKILL.md  plugin.yaml  worker-bridge.py
plugin-assets/: caduceus-pulse.sh  worker-bridge.py
plugin/commands/: caduceus-status.md
plugin/cron/: caduceus-pulse.yaml
skills/caduceus/: SKILL.md
src/: cli.rs  config.rs  context.rs  error.rs  finalize.rs  fixtures.rs  github.rs  install.rs  issue.rs  lib.rs  logging.rs  main.rs  meta.rs  migrate.rs  migrate_to_sqlite.rs  orchestration.rs  poll.rs  prompt.rs  queue.rs  retention.rs  status.rs  store.rs  tick.rs  validate.rs  verify.rs  worker.rs  worker_supervisor.rs  worktree.rs
src/cli/: mod.rs
src/daemon/: mod.rs  orchestration.rs  signals.rs  status.rs  tick.rs
src/executor/: mod.rs  network.rs  oci.rs  oci_args.rs  oci_lifecycle.rs  policy.rs  secret_transport.rs  trusted_host.rs  upgrade.rs
src/finalize/: comment_close.rs  commit.rs  dry_run_archive.rs  failure_investigation.rs  mod.rs  pr.rs  push.rs  reconcile.rs  voice.rs
src/github/: client.rs  issue.rs  link_header.rs  merge_detect.rs  mod.rs  poll.rs  verify.rs
src/infra/: config.rs  error.rs  fixtures.rs  install.rs  logging.rs  mod.rs  validate.rs
src/repo/: mirror.rs  mod.rs  storage.rs  worktree.rs
src/runtime/: audit.rs  mod.rs
src/scheduler/: circuit.rs  exclusion.rs  leadership.rs  leases.rs  mod.rs  pool.rs
src/state/: checkpoints.rs  meta.rs  migrate.rs  migrate_to_sqlite.rs  mod.rs  oci_run.rs  queue.rs  retention.rs  store.rs
src/worker/: context.rs  mod.rs  prompt.rs  supervisor.rs  worker_contract.rs
src/worktree/: gc.rs  git_runner.rs  mod.rs  repository.rs  testing.rs  worktree.rs
tests/: __init__.py  api_base_allowlist_test.rs  audit_redaction_test.rs  bridge_test.py  cadence_test.rs  canary_report.txt  checkpoint_crash_matrix_test.rs  claim_test.rs  commit_test.rs  config_bootstrap_test.rs  config_resolution_test.rs  config_test.rs  conftest.py  context_test.rs  credentials_audit_test.rs  daemon_lock_test.rs  discovery_pagination_test.rs  docs_contract_test.rs  dry_run_test.rs  error_test.rs  executor_config_test.rs  executor_oci_test.rs  executor_trusted_host_test.rs  failure_investigation_test.rs  failure_matrix_test.rs  fake_ctx.py  finalize_checkpoints_test.rs  fixtures_hermes_host_self_test.py  fixtures_self_test.rs  github_client_test.rs  hermes_host_test.py  hermes_lifecycle_test.rs  hermes_plugin_test.py  integration_scenarios.rs  integration_test.rs  issue_close_test.rs  issue_detail_test.rs  issue_poll_test.rs  lifecycle_matrix_test.rs  logging_test.rs  (+38 more)
tests/architecture/: docs_contract_test.rs  fixtures_hermes_host_self_test.py  fixtures_self_test.rs
tests/daemon/: daemon_lock_test.rs  drain_test.rs  runtime_path_test.rs  signal_test.rs  startup_test.rs  status_test.rs  tick_dispatch_test.rs  tick_test.rs
tests/executor/: cancellation_test.rs  credential_leak_test.rs  executor_config_test.rs  executor_oci_test.rs  executor_trusted_host_test.rs  isolation_escape_test.rs  network_isolation_test.rs  network_test.rs  oci_args_test.rs  oci_config_test.rs  oci_label_test.rs  oci_lifecycle_test.rs  oci_secret_transport_test.rs  policy_test.rs  resource_limit_test.rs  secret_grant_test.rs  tamper_test.rs  upgrade_test.rs
tests/fixtures/: bridge_harness.py  capability_simulator.py  crash_point.rs  fake_ctx.py  git_origin.rs  github.rs  hermes_bootstrap.sh  hermes_host.py  mod.rs  negative_plugin.yaml  process_tree.rs  release_binary.rs  scenario-1-golden.json  scenario-10-golden.json  scenario-2-golden.json  scenario-3-golden.json  scenario-4-golden.json  scenario-5-golden.json  scenario-6-golden.json  scenario-7-golden.json  scenario-9-golden.json
tests/github/: commit_test.rs  context_test.rs  discovery_pagination_test.rs  dry_run_test.rs  failure_investigation_test.rs  github_client_test.rs  issue_close_test.rs  issue_detail_test.rs  issue_poll_test.rs  pr_body_test.rs  pr_test.rs  prompt_test.rs  push_test.rs  rate_limit_test.rs  verify_test.rs  voice_rule_test.rs
tests/integration/: bridge_test.py  failure_matrix_test.rs  hermes_lifecycle_test.rs  integration_scenarios.rs  integration_test.rs  release_canary_test.rs
tests/plugin/: _helpers.py  test_ac11_ac12.py  test_cli.py  test_crash_boundary.py  test_cron_dispatch_cli.py  test_cron_install.py  test_cron_install_reconcile.py  test_cron_install_test.py  test_cron_remove.py  test_cron_remove_reconcile.py  test_cron_wrapper.py  test_doctor_checks.py  test_doctor_cli.py  test_doctor_finding.py  test_install.py  test_lifecycle.py  test_manifest.py  test_needs_attention.py  test_pulse_template.py  test_reconcile.py  test_register.py  test_setup.py  test_skill.py  test_snapshot.py  test_snapshot_wrapper.py  test_status.py
tests/repo/: mirror_test.rs  repository_discovery_test.rs  repository_poll_test.rs  storage_root_test.rs  worktree_create_test.rs  worktree_gc_test.rs  worktree_remove_test.rs  worktree_test.rs
tests/scheduler/: circuit_dispatch_test.rs  circuit_test.rs  failure_separation_test.rs  pool_test.rs
tests/state/: api_base_allowlist_test.rs  audit_redaction_test.rs  cadence_test.rs  checkpoint_crash_matrix_test.rs  claim_test.rs  config_bootstrap_test.rs  config_resolution_test.rs  config_test.rs  credentials_audit_test.rs  error_test.rs  finalize_checkpoints_test.rs  logging_test.rs  (+13 more)
(+291 files in other folders)
