[package]
name = "caduceus"
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
description = "Unix single-host, one-shot Rust daemon that polls GitHub, queues one unit of work per tick, and finalizes code or investigation results."
license = "MIT"
publish = false

[lib]
name = "caduceus"
path = "src/lib.rs"

[[bin]]
name = "caduceus"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "string", "wrap_help"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-appender = "0.2"
thiserror = "1"
fs2 = "0.4"
ulid = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
regex = "1"
which = "6"
shellexpand = "3"
sha2 = "0.10"
hex = "0.4"
filetime = "0.2"
walkdir = "2"
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["feature", "fs", "process", "signal"] }
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_fs = "1"
predicates = "3"
serial_test = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[[test]]
name = "pool_test"
path = "tests/scheduler/pool_test.rs"
edition = "2021"

[[test]]
name = "circuit_test"
path = "tests/scheduler/circuit_test.rs"
edition = "2021"

[[test]]
name = "failure_separation_test"
path = "tests/scheduler/failure_separation_test.rs"
edition = "2021"

[[test]]
name = "circuit_dispatch_test"
path = "tests/scheduler/circuit_dispatch_test.rs"
edition = "2021"

[[test]]
name = "drain_test"
path = "tests/daemon/drain_test.rs"
edition = "2021"

[[test]]
name = "mirror_test"
path = "tests/repo/mirror_test.rs"
edition = "2021"

[[test]]
name = "worktree_test"
path = "tests/repo/worktree_test.rs"
edition = "2021"

[[test]]
name = "storage_root_test"
path = "tests/repo/storage_root_test.rs"
edition = "2021"

[[test]]
name = "startup_test"
path = "tests/daemon/startup_test.rs"
edition = "2021"

[[test]]
name = "executor_trusted_host_test"
path = "tests/executor_trusted_host_test.rs"
edition = "2021"

[[test]]
name = "executor_oci_test"
path = "tests/executor_oci_test.rs"
edition = "2021"

[[test]]
name = "executor_config_test"
path = "tests/executor_config_test.rs"
edition = "2021"

[[test]]
name = "tick_dispatch_test"
path = "tests/tick_dispatch_test.rs"
edition = "2021"

[[test]]
name = "oci_config_test"
path = "tests/oci_config_test.rs"
edition = "2021"

[[test]]
name = "oci_run_test"
path = "tests/state/oci_run_test.rs"
edition = "2021"

[[test]]
name = "oci_args_test"
path = "tests/executor/oci_args_test.rs"
edition = "2021"
