[package]
name = "caduceus"
version = "1.0.0"
edition = "2021"
rust-version = "1.97"
description = "Unix single-host, one-shot Rust daemon that polls GitHub, queues one unit of work per tick, and finalizes code or investigation results."
license = "MIT"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(env, values("CADUCEUS_RUN_ISOLATION_TESTS"))'] }

[lib]
name = "caduceus"
path = "src/lib.rs"

[[bin]]
name = "caduceus"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "string", "wrap_help"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-appender = "0.2"
thiserror = "1"
fs2 = "0.4"
ulid = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
regex = "1"
which = "6"
shellexpand = "3"
sha2 = "0.10"
hex = "0.4"
filetime = "0.2"
walkdir = "2"
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["feature", "fs", "process", "signal"] }
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_fs = "1"
predicates = "3"
serial_test = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[[test]]
name = "pool_test"
path = "tests/scheduler/pool_test.rs"

[[test]]
name = "circuit_test"
path = "tests/scheduler/circuit_test.rs"

[[test]]
name = "failure_separation_test"
path = "tests/scheduler/failure_separation_test.rs"

[[test]]
name = "circuit_dispatch_test"
path = "tests/scheduler/circuit_dispatch_test.rs"

[[test]]
name = "drain_test"
path = "tests/daemon/drain_test.rs"

[[test]]
name = "mirror_test"
path = "tests/repo/mirror_test.rs"

[[test]]
name = "worktree_test"
path = "tests/repo/worktree_test.rs"

[[test]]
name = "storage_root_test"
path = "tests/repo/storage_root_test.rs"

[[test]]
name = "startup_test"
path = "tests/daemon/startup_test.rs"

[[test]]
name = "executor_trusted_host_test"
path = "tests/executor/executor_trusted_host_test.rs"

[[test]]
name = "executor_oci_test"
path = "tests/executor/executor_oci_test.rs"

[[test]]
name = "executor_config_test"
path = "tests/executor/executor_config_test.rs"

[[test]]
name = "tick_dispatch_test"
path = "tests/daemon/tick_dispatch_test.rs"

[[test]]
name = "oci_config_test"
path = "tests/executor/oci_config_test.rs"

[[test]]
name = "oci_run_test"
path = "tests/state/oci_run_test.rs"

[[test]]
name = "oci_args_test"
path = "tests/executor/oci_args_test.rs"

[[test]]
name = "oci_lifecycle_test"
path = "tests/executor/oci_lifecycle_test.rs"

[[test]]
name = "oci_secret_transport_test"
path = "tests/executor/oci_secret_transport_test.rs"

[[test]]
name = "oci_label_test"
path = "tests/executor/oci_label_test.rs"

[[test]]
name = "policy_test"
path = "tests/executor/policy_test.rs"

[[test]]
name = "network_test"
path = "tests/executor/network_test.rs"

[[test]]
name = "secret_grant_test"
path = "tests/executor/secret_grant_test.rs"

[[test]]
name = "upgrade_test"
path = "tests/executor/upgrade_test.rs"

[[test]]
name = "isolation_escape_test"
path = "tests/executor/isolation_escape_test.rs"

[[test]]
name = "credential_leak_test"
path = "tests/executor/credential_leak_test.rs"

[[test]]
name = "network_isolation_test"
path = "tests/executor/network_isolation_test.rs"

[[test]]
name = "resource_limit_test"
path = "tests/executor/resource_limit_test.rs"

[[test]]
name = "cancellation_test"
path = "tests/executor/cancellation_test.rs"

[[test]]
name = "tamper_test"
path = "tests/executor/tamper_test.rs"

[[test]]
name = "daemon_lock_test"
path = "tests/daemon/daemon_lock_test.rs"

[[test]]
name = "runtime_path_test"
path = "tests/daemon/runtime_path_test.rs"

[[test]]
name = "signal_test"
path = "tests/daemon/signal_test.rs"

[[test]]
name = "tick_test"
path = "tests/daemon/tick_test.rs"

[[test]]
name = "status_test"
path = "tests/daemon/status_test.rs"

[[test]]
name = "repository_discovery_test"
path = "tests/repo/repository_discovery_test.rs"

[[test]]
name = "repository_poll_test"
path = "tests/repo/repository_poll_test.rs"

[[test]]
name = "worktree_create_test"
path = "tests/repo/worktree_create_test.rs"

[[test]]
name = "worktree_gc_test"
path = "tests/repo/worktree_gc_test.rs"

[[test]]
name = "worktree_remove_test"
path = "tests/repo/worktree_remove_test.rs"

[[test]]
name = "scheduler_leadership_test"
path = "tests/scheduler/scheduler_leadership_test.rs"

[[test]]
name = "scheduler_leases_test"
path = "tests/scheduler/scheduler_leases_test.rs"

[[test]]
name = "api_base_allowlist_test"
path = "tests/state/api_base_allowlist_test.rs"

[[test]]
name = "audit_redaction_test"
path = "tests/state/audit_redaction_test.rs"

[[test]]
name = "cadence_test"
path = "tests/state/cadence_test.rs"

[[test]]
name = "checkpoint_crash_matrix_test"
path = "tests/state/checkpoint_crash_matrix_test.rs"

[[test]]
name = "claim_test"
path = "tests/state/claim_test.rs"

[[test]]
name = "config_bootstrap_test"
path = "tests/state/config_bootstrap_test.rs"

[[test]]
name = "config_resolution_test"
path = "tests/state/config_resolution_test.rs"

[[test]]
name = "config_test"
path = "tests/state/config_test.rs"

[[test]]
name = "credentials_audit_test"
path = "tests/state/credentials_audit_test.rs"

[[test]]
name = "error_test"
path = "tests/state/error_test.rs"

[[test]]
name = "finalize_checkpoints_test"
path = "tests/state/finalize_checkpoints_test.rs"

[[test]]
name = "lifecycle_matrix_test"
path = "tests/state/lifecycle_matrix_test.rs"

[[test]]
name = "logging_test"
path = "tests/state/logging_test.rs"

[[test]]
name = "meta_test"
path = "tests/state/meta_test.rs"

[[test]]
name = "migration_test"
path = "tests/state/migration_test.rs"

[[test]]
name = "queue_model_test"
path = "tests/state/queue_model_test.rs"

[[test]]
name = "queue_reset_cli_test"
path = "tests/state/queue_reset_cli_test.rs"

[[test]]
name = "reaper_test"
path = "tests/state/reaper_test.rs"

[[test]]
name = "reconcile_side_effects_test"
path = "tests/state/reconcile_side_effects_test.rs"

[[test]]
name = "retry_test"
path = "tests/state/retry_test.rs"

[[test]]
name = "review_lifecycle_test"
path = "tests/state/review_lifecycle_test.rs"

[[test]]
name = "state_store_test"
path = "tests/state/state_store_test.rs"

[[test]]
name = "token_test"
path = "tests/state/token_test.rs"

[[test]]
name = "validate_test"
path = "tests/state/validate_test.rs"

[[test]]
name = "worker_archive_test"
path = "tests/worker/worker_archive_test.rs"

[[test]]
name = "worker_env_test"
path = "tests/worker/worker_env_test.rs"

[[test]]
name = "worker_parent_death_test"
path = "tests/worker/worker_parent_death_test.rs"

[[test]]
name = "worker_process_test"
path = "tests/worker/worker_process_test.rs"

[[test]]
name = "worker_result_test"
path = "tests/worker/worker_result_test.rs"

[[test]]
name = "worker_timeout_test"
path = "tests/worker/worker_timeout_test.rs"

[[test]]
name = "worker_transcript_test"
path = "tests/worker/worker_transcript_test.rs"

[[test]]
name = "commit_test"
path = "tests/github/commit_test.rs"

[[test]]
name = "context_test"
path = "tests/github/context_test.rs"

[[test]]
name = "discovery_pagination_test"
path = "tests/github/discovery_pagination_test.rs"

[[test]]
name = "dry_run_test"
path = "tests/github/dry_run_test.rs"

[[test]]
name = "failure_investigation_test"
path = "tests/github/failure_investigation_test.rs"

[[test]]
name = "github_client_test"
path = "tests/github/github_client_test.rs"

[[test]]
name = "issue_close_test"
path = "tests/github/issue_close_test.rs"

[[test]]
name = "issue_detail_test"
path = "tests/github/issue_detail_test.rs"

[[test]]
name = "issue_poll_test"
path = "tests/github/issue_poll_test.rs"

[[test]]
name = "pr_body_test"
path = "tests/github/pr_body_test.rs"

[[test]]
name = "pr_test"
path = "tests/github/pr_test.rs"

[[test]]
name = "prompt_test"
path = "tests/github/prompt_test.rs"

[[test]]
name = "push_test"
path = "tests/github/push_test.rs"

[[test]]
name = "rate_limit_test"
path = "tests/github/rate_limit_test.rs"

[[test]]
name = "verify_test"
path = "tests/github/verify_test.rs"

[[test]]
name = "voice_rule_test"
path = "tests/github/voice_rule_test.rs"

[[test]]
name = "integration_scenarios"
path = "tests/integration/integration_scenarios.rs"

[[test]]
name = "failure_matrix"
path = "tests/integration/failure_matrix_test.rs"

[[test]]
name = "hermes_lifecycle"
path = "tests/integration/hermes_lifecycle_test.rs"

[[test]]
name = "release_canary"
path = "tests/integration/release_canary_test.rs"

[[test]]
name = "integration_test"
path = "tests/integration/integration_test.rs"

[[test]]
name = "docs_contract_test"
path = "tests/architecture/docs_contract_test.rs"

[[test]]
name = "fixtures_self_test"
path = "tests/architecture/fixtures_self_test.rs"
